--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,9 @@ html {
 }
 
 body {
-  font-family: "Merriweather", "Helvetica Neue", Arial, sans-serif;
   background-color: #212529;
+  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  font-size: x-large;
 }
 
 hr {
@@ -52,7 +53,7 @@ h6 {
 }
 
 section {
-  padding: 8rem 0;
+  padding: 5rem 0;
 }
 
 .section-heading {
@@ -79,95 +80,6 @@ img::selection {
 img::-moz-selection {
   color: #fff;
   background: transparent;
-}
-
-#mainNav {
-  border-bottom: 1px solid rgba(33, 37, 41, 0.1);
-  background-color: #fff;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-#mainNav .navbar-brand {
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #f05f40;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-}
-
-#mainNav .navbar-brand:focus,
-#mainNav .navbar-brand:hover {
-  color: #f05f40;
-}
-
-#mainNav .navbar-nav > li.nav-item > a.nav-link,
-#mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
-  font-size: 0.9rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #212529;
-}
-
-#mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
-#mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-  color: #f05f40;
-}
-
-#mainNav .navbar-nav > li.nav-item > a.nav-link.active,
-#mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active {
-  color: #f05f40 !important;
-  background-color: transparent;
-}
-
-#mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover,
-#mainNav .navbar-nav > li.nav-item > a.nav-link:focus.active:hover {
-  background-color: transparent;
-}
-
-@media (min-width: 992px) {
-  #mainNav {
-    border-color: transparent;
-    background-color: transparent;
-  }
-  #mainNav .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  #mainNav .navbar-brand:focus,
-  #mainNav .navbar-brand:hover {
-    color: #fff;
-  }
-  #mainNav .navbar-nav > li.nav-item > a.nav-link {
-    padding: 0.5rem 1rem;
-  }
-  #mainNav .navbar-nav > li.nav-item > a.nav-link,
-  #mainNav .navbar-nav > li.nav-item > a.nav-link:focus {
-    color: rgba(255, 255, 255, 0.7);
-  }
-  #mainNav .navbar-nav > li.nav-item > a.nav-link:hover,
-  #mainNav .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-    color: #fff;
-  }
-  #mainNav.navbar-shrink {
-    border-bottom: 1px solid rgba(33, 37, 41, 0.1);
-    background-color: #fff;
-  }
-  #mainNav.navbar-shrink .navbar-brand {
-    color: #f05f40;
-  }
-  #mainNav.navbar-shrink .navbar-brand:focus,
-  #mainNav.navbar-shrink .navbar-brand:hover {
-    color: #f05f40;
-  }
-  #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link,
-  #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus {
-    color: #212529;
-  }
-  #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:hover,
-  #mainNav.navbar-shrink .navbar-nav > li.nav-item > a.nav-link:focus:hover {
-    color: #f05f40;
-  }
 }
 
 header {
@@ -216,87 +128,6 @@ header.masthead p {
   max-width: 400px;
 }
 
-.portfolio-box {
-  position: relative;
-  display: block;
-  max-width: 650px;
-  margin: 0 auto;
-}
-
-.portfolio-box .portfolio-box-caption {
-  position: absolute;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  opacity: 0;
-  color: #fff;
-  background: rgba(240, 95, 64, 0.9);
-  -webkit-transition: all 0.2s;
-  -moz-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  transform: translateY(-50%);
-  text-align: center;
-}
-
-.portfolio-box
-  .portfolio-box-caption
-  .portfolio-box-caption-content
-  .project-category,
-.portfolio-box
-  .portfolio-box-caption
-  .portfolio-box-caption-content
-  .project-name {
-  padding: 0 15px;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-}
-
-.portfolio-box
-  .portfolio-box-caption
-  .portfolio-box-caption-content
-  .project-category {
-  font-size: 14px;
-  font-weight: 600;
-  text-transform: uppercase;
-}
-
-.portfolio-box
-  .portfolio-box-caption
-  .portfolio-box-caption-content
-  .project-name {
-  font-size: 18px;
-}
-
-.portfolio-box:hover .portfolio-box-caption {
-  opacity: 1;
-}
-
-.portfolio-box:focus {
-  outline: none;
-}
-
-@media (min-width: 768px) {
-  .portfolio-box
-    .portfolio-box-caption
-    .portfolio-box-caption-content
-    .project-category {
-    font-size: 16px;
-  }
-  .portfolio-box
-    .portfolio-box-caption
-    .portfolio-box-caption-content
-    .project-name {
-    font-size: 22px;
-  }
-}
-
 .text-primary {
   color: #f05f40 !important;
 }
@@ -330,6 +161,14 @@ header.masthead p {
   box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
 }
 
+/* ----------- */
+/* CUSTOM PART */
+/* ----------- */
+
+h2 {
+  font-size: 3rem;
+}
+
 #particles canvas {
   position: absolute;
   width: 100%;
@@ -346,8 +185,35 @@ header.masthead p {
   width: 6rem;
 }
 
-#meetup {
-  padding: 5rem 0;
+#about {
+  background-color: #fff;
+}
+
+#about .row {
+  margin-bottom: 2rem;
+}
+
+#about p {
+  text-align: justify;
+  color: #6c757d;
+  padding: 0 0.5rem;
+}
+
+#about .fab,
+.fas {
+  margin-bottom: 1rem;
+}
+
+#about .fa-bitcoin {
+  color: #ff9900;
+}
+
+#about .fa-link {
+  color: #a5a5a5;
+}
+
+#about h3 {
+  font-weight: bold;
 }
 
 #details {
@@ -361,7 +227,7 @@ header.masthead p {
 #details .icon {
   text-align: center;
   margin: auto;
-  color: #212529;
+  color: #fff;
 }
 
 #details .row {
@@ -411,14 +277,15 @@ header.masthead p {
   content: ">";
   margin-right: 1rem;
   font-weight: bold;
-  color: #212529;
+  color: #fff;
 }
 
 footer {
   background-color: #212529;
   color: #fff;
-  padding: 30px 0;
+  padding: 1rem 0;
   font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
+  font-size: small;
 }
 
 footer .fa-heart {
