--- a/css/main.css
+++ b/css/main.css
@@ -197,11 +197,12 @@ h2 {
   text-align: justify;
   color: #6c757d;
   padding: 0 0.5rem;
+  font-size: 1.25rem;
 }
 
-#about .fab,
-.fas {
+.track span {
   margin-bottom: 1rem;
+  color: #a5a5a5;
 }
 
 #about .fa-bitcoin {
@@ -209,11 +210,25 @@ h2 {
 }
 
 #about .fa-link {
-  color: #a5a5a5;
+  color: #fff;
 }
 
 #about h3 {
   font-weight: bold;
+}
+
+#tech_icon i {
+  position: absolute;
+}
+
+.track {
+  height: 100%;
+}
+
+@media (max-width: 992px) {
+  .tracks > div {
+    margin-bottom: 2rem;
+  }
 }
 
 #details {
