--- a/css/main.css
+++ b/css/main.css
@@ -56,8 +56,8 @@ section {
   padding: 5rem 0;
 }
 
-.section-heading {
-  margin-top: 0;
+.section-head {
+  margin-bottom: 1rem;
 }
 
 ::-moz-selection {
@@ -283,7 +283,7 @@ h2 {
 .network-box:hover .fa-meetup {
   color: #e0393e !important;
 }
-
+/*
 #meetup li {
   list-style-type: none;
 }
@@ -293,6 +293,21 @@ h2 {
   margin-right: 1rem;
   font-weight: bold;
   color: #fff;
+}
+*/
+
+#team .team-list {
+  text-align: center;
+  justify-content: center;
+}
+
+#team .team-list .card {
+  width: 9rem;
+  background: none;
+  border: none;
+  color: #fff;
+  margin: 0 1rem;
+  font-size: large;
 }
 
 footer {
