add animation on hover

--- a/css/main.css
+++ b/css/main.css
@@ -317,6 +317,49 @@ h2 {
   margin: 1rem;
 }
 
+.card .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+}
+
+.card.epitech .overlay {
+  background-color: #3878b7;
+}
+
+.card.ynov .overlay {
+  background-color: #42ab9e;
+}
+
+.card.zenika .overlay {
+  background-color: #b21e3e;
+}
+
+.card.spacelephant .overlay {
+  background-color: #530666;
+}
+
+.card:hover .overlay {
+  opacity: 0.95;
+}
+
+.card .text {
+  color: white;
+  font-size: xx-large;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 footer {
   background-color: #212529;
   color: #fff;
