--- a/css/main.css
+++ b/css/main.css
@@ -314,6 +314,10 @@ h2 {
 .network-box:hover .fa-meetup {
   color: #e0393e !important;
 }
+
+.network-box:hover .fa-envelope {
+  color: gray !important;
+}
 /*
 #meetup li {
   list-style-type: none;
