--- a/css/main.css
+++ b/css/main.css
@@ -290,6 +290,102 @@ h2 {
   }
 }
 
+.swiper-container{
+  width: 100%;
+  height: 100%;
+  color:black;
+}
+
+.swiper-slide{
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-wrapper{
+  align-items: center;
+}
+
+#events .container-fluid{
+  padding: unset;
+}
+
+
+.event{
+  display: flex;
+  flex-direction: column;
+  border: 5px solid grey;
+  border-radius: 20px;
+}
+
+.event.upcoming{
+  border-color: #f05f40;
+  box-shadow: 0 12px 15px black
+}
+
+.event-body{
+  padding: 30px 20px 0px 20px;  
+}
+
+.event h3{
+  font-weight: bold;
+}
+
+.event-date-time{
+  margin:20px 0px;
+}
+
+.event-date-time p{
+  margin-bottom: 0px;
+}
+
+.event.upcoming .event-date-time p{
+  font-weight: normal !important;
+  font-size: unset !important;
+}
+
+.event .event-date-time p:nth-child(1){
+  font-weight: lighter;
+  font-size: smaller;
+}
+
+.event-address{
+  font-weight: lighter;
+}
+
+.event-more{
+  width:100%;
+  background-color: grey;
+  color:white !important;
+  padding: 7px;
+  font-size: medium;
+  border-radius: 0px 0px 10px 10px;
+}
+
+.event.upcoming .event-more{
+  background-color: #f05f40;
+}
+
+.carousel-navigation{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  font-size: 3em;
+  margin-top: 20px;
+}
+
+.carousel-navigation *{
+  margin: 0px 1rem;
+  color: #7f7f7f
+}
+
+.carousel-navigation *.disabled{
+  color:#46494A;
+}
+
 #details {
   text-align: start;
   font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
