build: rebuild site with new config

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -332,6 +332,7 @@ h2 {
 
 .event h3{
   font-weight: bold;
+  font-size: 1.3rem;
 }
 
 .event-date-time{
@@ -401,28 +402,6 @@ h2 {
 
 .carousel-navigation *.disabled{
   color:#46494A;
-}
-
-#details {
-  text-align: start;
-  font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
-  font-size: x-large;
-  margin: 40px 0;
-}
-
-#details .icon {
-  text-align: center;
-  margin: auto;
-  color: #fff;
-}
-
-#details .row {
-  margin-bottom: 1rem;
-}
-
-#program > h4 {
-  margin-bottom: 1rem;
-  font-weight: bold;
 }
 
 #networks {
