feat: remove bjn add lme

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -242,9 +242,9 @@
         </div>
 
         <div class="card">
-          <img class="card-img-top rounded-circle" src="./img/team/bjn.png">
+          <img class="card-img-top rounded-circle" src="./img/team/lme.jpg">
           <div class="card-body">
-            <p class="card-text">Boris JUGUIN</p>
+            <p class="card-text">Laure MERLIN</p>
           </div>
         </div>
 
