feat: clean partner list

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -258,39 +258,12 @@
         <div class="col text-center section-title">
           <h2 class="text-white">
             <i class="fas fa-link"></i>
-            Nos partenaires</h2>
+            Nos sponsors</h2>
           <hr class="light my-4">
         </div>
       </div>
 
       <div class="row partner-list">
-
-        <div class="card epitech">
-          <a href="http://www.epitech.eu/nantes/ecole-informatique-nantes.aspx" target="_blank">
-            <img class="card-img-top" src="./img/partner/epitech.png">
-            <div class="overlay rounded-circle">
-              <p class="text">Epitech Nantes</p>
-            </div>
-          </a>
-        </div>
-
-        <div class="card ynov">
-          <a href="https://nantes.ynov.com" target="_blank">
-            <img class="card-img-top" src="./img/partner/ynov.png">
-            <div class="overlay rounded-circle">
-              <p class="text">Ynov Nantes</p>
-            </div>
-          </a>
-        </div>
-
-        <div class="card zenika">
-          <a href="https://www.zenika.com" target="_blank">
-            <img class="card-img-top" src="./img/partner/zenika.png">
-            <div class="overlay rounded-circle">
-              <p class="text">Zenika Nantes</p>
-            </div>
-          </a>
-        </div>
 
         <div class="card spacelephant">
           <a href="https://www.spacelephant.org" target="_blank">
@@ -300,15 +273,88 @@
             </div>
           </a>
         </div>
-        <div class="card bgo">
-          <a href="https://www.blockchaingrandouest.org" target="_blank">
-            <img class="card-img-top" src="./img/partner/bgo.png">
+
+        <div class="card novapuls">
+          <a href="http://novapuls.fr/" target="_blank">
+            <img class="card-img-top" src="./img/partner/novapuls.png">
             <div class="overlay rounded-circle">
-              <p class="text">Blockchain Grand Ouest</p>
+              <p class="text">Novapuls</p>
             </div>
           </a>
         </div>
-      </div>
+
+        <div class="card pld">
+          <a href="http://novapuls.fr/" target="_blank">
+            <img class="card-img-top" src="./img/partner/pld.png">
+            <div class="overlay rounded-circle">
+              <p class="text">Pays de Loire Dévelopment</p>
+            </div>
+          </a>
+        </div>
+
+        <!--div class="row partner-regular">
+
+          <div class="col-4">
+            <h3 class="text-white">Réguliers</h3>
+          </div>
+          <div class="col-8">
+            <div class="card spacelephant">
+              <a href="https://www.spacelephant.org" target="_blank">
+                <img class="card-img-top" src="./img/partner/spacelephant.png">
+                <div class="overlay rounded-circle">
+                  <p class="text">Space Elephant</p>
+                </div>
+              </a>
+            </div>
+
+            <div class="card novapuls">
+              <a href="http://novapuls.fr/" target="_blank">
+                <img class="card-img-top" src="./img/partner/novapuls.png">
+                <div class="overlay rounded-circle">
+                  <p class="text">Novapuls</p>
+                </div>
+              </a>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row partner-occasional">
+
+          <div class="col-4">
+            <h5 class="text-white">Occasionnels</h5>
+          </div>
+          <div class="col-8">
+
+            <div class="epitech">
+              <a href="http://www.epitech.eu/nantes/ecole-informatique-nantes.aspx" target="_blank">
+                <img class="img-fluid rounded-circle" src="./img/partner/epitech.png">
+              </a>
+            </div>
+
+            <div class="ynov">
+              <a href="https://nantes.ynov.com" target="_blank">
+                <img class="img-fluid rounded-circle" src="./img/partner/ynov.png">
+              </a>
+            </div>
+
+            <div class="zenika">
+              <a href="https://www.zenika.com" target="_blank">
+                <img class="img-fluid rounded-circle" src="./img/partner/zenika.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="card sodifrance">
+            <a href="https://www.zenika.com" target="_blank">
+              <img class="card-img-top" src="./img/partner/sodifrance.png">
+              <div class="overlay rounded-circle">
+                <p class="text">Sodifrance</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div-->
     </div>
   </section>
 
