feat: add donations section

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -358,6 +358,26 @@
     </div>
   </section>
 
+  <section class="bg" id="donation">
+      <div class="container">
+        <div class="row section-head">
+          <div class="col text-center section-title">
+            <h2 class="text-white">
+              <i class="fas fa-link"></i>
+              Soutenez nous en crypto</h2>
+            <hr class="light my-4">
+          </div>
+        </div>
+      </div>
+      
+      <div class="row donation-list">
+        <img src="./img/donations/ark.png">
+        <img src="./img/donations/eth.png">
+        <img src="./img/donations/bitcoin.png">
+      </div>
+    
+    </section>
+
   <section id="networks">
     <div class="container">
       <div class="row">
