feat: add fiat in donations

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -374,6 +374,7 @@
         <img src="./img/donations/ark.png">
         <img src="./img/donations/eth.png">
         <img src="./img/donations/bitcoin.png">
+        <img src="./img/donations/fiat.png">
       </div>
     
     </section>
