fix: replace expired Slack invitation link
By a new one which doesn't expire

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -127,10 +127,10 @@
               Ces sessions ont pour objectif de réunir les cryptomaniacs Nantais afin d'échanger sur l'actualité, les bons plans et les
               techniques de trading.
               <br/> Nous avons également mis en place un
-              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener" class="transparent-link">portefeuille d'investissement</a> commun 100 % virtuel, que nous gérons de semaine en semaine.
+              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noreferrer" class="transparent-link">portefeuille d'investissement</a> commun 100 % virtuel, que nous gérons de semaine en semaine.
               <br/>Régulièrement, nous permettons aux néophytes de correctement s'intégrer en reprenant les bases.
               <br/>
-              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noopener">
+              <a href="https://www.cryptocompare.com/portfolio-public/?id=340348" target="_blank" rel="noreferrer">
                 <span class="fa-stack fa-2x wallet-icon" data-toggle="tooltip" title="Lien vers le portefeuille virtuel">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fas fa-wallet fa-stack-1x fa-inverse"></i>
@@ -266,7 +266,7 @@
       <div class="row partner-list">
 
         <div class="card spacelephant">
-          <a href="https://www.spacelephant.org" target="_blank">
+          <a href="https://www.spacelephant.org" target="_blank" rel="noreferrer">
             <img class="card-img-top" src="./img/partner/spacelephant.png">
             <div class="overlay rounded-circle">
               <p class="text">Space Elephant</p>
@@ -275,7 +275,7 @@
         </div>
 
         <div class="card novapuls">
-          <a href="http://novapuls.fr/" target="_blank">
+          <a href="http://novapuls.fr/" target="_blank" rel="noreferrer">
             <img class="card-img-top" src="./img/partner/novapuls.png">
             <div class="overlay rounded-circle">
               <p class="text">Novapuls</p>
@@ -284,7 +284,7 @@
         </div>
 
         <div class="card pld">
-          <a href="http://novapuls.fr/" target="_blank">
+          <a href="http://novapuls.fr/" target="_blank" rel="noreferrer">
             <img class="card-img-top" src="./img/partner/pld.png">
             <div class="overlay rounded-circle">
               <p class="text">Pays de Loire Dévelopment</p>
@@ -299,7 +299,7 @@
           </div>
           <div class="col-8">
             <div class="card spacelephant">
-              <a href="https://www.spacelephant.org" target="_blank">
+              <a href="https://www.spacelephant.org" target="_blank" rel="noreferrer">
                 <img class="card-img-top" src="./img/partner/spacelephant.png">
                 <div class="overlay rounded-circle">
                   <p class="text">Space Elephant</p>
@@ -308,7 +308,7 @@
             </div>
 
             <div class="card novapuls">
-              <a href="http://novapuls.fr/" target="_blank">
+              <a href="http://novapuls.fr/" target="_blank" rel="noreferrer">
                 <img class="card-img-top" src="./img/partner/novapuls.png">
                 <div class="overlay rounded-circle">
                   <p class="text">Novapuls</p>
@@ -327,26 +327,26 @@
           <div class="col-8">
 
             <div class="epitech">
-              <a href="http://www.epitech.eu/nantes/ecole-informatique-nantes.aspx" target="_blank">
+              <a href="http://www.epitech.eu/nantes/ecole-informatique-nantes.aspx" target="_blank" rel="noreferrer">
                 <img class="img-fluid rounded-circle" src="./img/partner/epitech.png">
               </a>
             </div>
 
             <div class="ynov">
-              <a href="https://nantes.ynov.com" target="_blank">
+              <a href="https://nantes.ynov.com" target="_blank" rel="noreferrer">
                 <img class="img-fluid rounded-circle" src="./img/partner/ynov.png">
               </a>
             </div>
 
             <div class="zenika">
-              <a href="https://www.zenika.com" target="_blank">
+              <a href="https://www.zenika.com" target="_blank" rel="noreferrer">
                 <img class="img-fluid rounded-circle" src="./img/partner/zenika.png">
               </a>
             </div>
           </div>
 
           <div class="card sodifrance">
-            <a href="https://www.zenika.com" target="_blank">
+            <a href="https://www.zenika.com" target="_blank" rel="noreferrer">
               <img class="card-img-top" src="./img/partner/sodifrance.png">
               <div class="overlay rounded-circle">
                 <p class="text">Sodifrance</p>
@@ -369,14 +369,14 @@
           </div>
         </div>
       </div>
-      
+
       <div class="row donation-list">
         <img src="./img/donations/ark.png">
         <img src="./img/donations/eth.png">
         <img src="./img/donations/bitcoin.png">
         <img src="./img/donations/fiat.png">
       </div>
-    
+
     </section>
 
   <section id="networks">
@@ -394,8 +394,8 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://join.slack.com/t/meetup-blockchain/shared_invite/enQtMzAwOTA5MDI1Njk3LWExYWYxYTNiMzlhOTA1ZWFiNjIzN2ZhMTQyZWFlMWY1NzQyMGE3OTMwMmI5YTFhMzM4Y2ZlYjcxMTU3NjBkNWE"
-              target="_blank">
+            <a href="https://join.slack.com/t/meetup-blockchain/shared_invite/enQtMzAwOTA5MDI1Njk3LTg2NGJkNTlkYWY0Njc0YzlkMWMxZmVjZmFiOGI2YTE3M2RlMGMzNzdlYzUyYmNhOTJiZGFjYjY4ODQ5NTAwY2I"
+              target="_blank" rel="noreferrer">
               <i class="fab fa-4x fa-slack text-primary mb-3 icons"></i>
               <h3 class="mb-3">
                 Notre channel
@@ -407,7 +407,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://twitter.com/Blockchain44" target="_blank">
+            <a href="https://twitter.com/Blockchain44" target="_blank" rel="noreferrer">
               <i class="fab fa-4x fa-twitter text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre flux
@@ -419,7 +419,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://github.com/BlockchainEtSociete" target="_blank">
+            <a href="https://github.com/BlockchainEtSociete" target="_blank" rel="noreferrer">
               <i class="fab fa-4x fa-github text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Nos projets
@@ -431,7 +431,7 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://www.meetup.com/Blockchain-Societe-Nantes" target="_blank">
+            <a href="https://www.meetup.com/Blockchain-Societe-Nantes" target="_blank" rel="noreferrer">
               <i class="fab fa-4x fa-meetup text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre page
@@ -457,7 +457,7 @@
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://www.facebook.com/groups/822513524759506/" target="_blank">
+            <a href="https://www.facebook.com/groups/822513524759506/" target="_blank" rel="noreferrer">
               <i class="fab fa-4x fa-facebook-f text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre groupe
@@ -469,7 +469,7 @@
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="network-box mt-5 mx-auto">
-            <a href="https://www.linkedin.com/company/blockchain-et-societe" target="_blank">
+            <a href="https://www.linkedin.com/company/blockchain-et-societe" target="_blank" rel="noreferrer">
               <i class="fab fa-4x fa-linkedin text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
                 Notre page
@@ -501,7 +501,7 @@
   <!-- Plugin JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-  
+
   <!-- Swiper -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@4.4.6/dist/js/swiper.min.js"></script>
 
