--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Blockchain et societe website">
   <meta name="author" content="Guillaume Nicolas">
+  <meta name="theme-color" content="#414344">
 
   <title>Blockchain et société</title>
 
