--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -275,6 +275,15 @@
           </a>
         </div>
 
+        <div class="card unik-name">
+          <a href="https://www.unik-name.com" target="_blank" rel="noreferrer">
+            <img class="card-img-top" src="./img/partner/unik-name.png">
+            <div class="overlay rounded-circle">
+              <p class="text">@unik-name</p>
+            </div>
+          </a>
+        </div>
+
         <div class="card novapuls">
           <a href="http://novapuls.fr/" target="_blank" rel="noreferrer">
             <img class="card-img-top" src="./img/partner/novapuls.png">
