--- a/static/css/main.css
+++ b/static/css/main.css
@@ -327,7 +327,7 @@ h2 {
 }
 
 .event-body{
-  padding: 30px 20px 0px 20px;  
+  padding: 30px 20px 0px 20px;
 }
 
 .event h3{
@@ -478,7 +478,7 @@ h2 {
 
 #partners .partner-list .card {
   width: 15rem;
-}  
+}
 
 .card .overlay {
   position: absolute;
@@ -512,8 +512,12 @@ h2 {
   background-color: #530666;
 }
 
+.card.unik-name .overlay {
+  background-color: #f8662e;
+}
+
 .card.novapuls .overlay {
-  background-color: #ee6f3de6;
+  background-color: #ee6f3d;
 }
 
 .card:hover .overlay {
