feat: improve contact wording

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -408,7 +408,7 @@
               target="_blank" rel="noreferrer">
               <i class="fab fa-4x fa-slack text-primary mb-3 icons"></i>
               <h3 class="mb-3">
-                Notre channel
+                Notre groupe
                 <br/>
                 <strong>Slack</strong>
               </h3>
@@ -420,7 +420,7 @@
             <a href="https://twitter.com/Blockchain44" target="_blank" rel="noreferrer">
               <i class="fab fa-4x fa-twitter text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
-                Notre flux
+                Notre fil
                 <br/>
                 <strong>Twitter</strong>
               </h3>
@@ -444,7 +444,7 @@
             <a href="https://www.meetup.com/Blockchain-Societe-Nantes" target="_blank" rel="noreferrer">
               <i class="fab fa-4x fa-meetup text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">
-                Notre page
+                Notre groupe
                 <br/>
                 <strong>Meetup</strong>
               </h3>
