feat: add legal mentions

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -494,10 +494,23 @@
   </section>
 
   <footer class="container-fluid">
-    <div class=" mx-auto text-center">
+    <div class="mx-auto text-center">
       Homemade with
       <span class="fa fa-heart"></span>
       by ourselves
+    </div>
+    <hr>
+    <div class="mx-auto text-center">
+      Blockchain et Société, <a href="https://www.journal-officiel.gouv.fr/association/index.php?ACTION=Rechercher&HI_PAGE=1&HI_COMPTEUR=0&original_method=get&WHAT=&JTH_ID=&JAN_BD_CP=&JRE_ID=&JAN_LIEU_DECL=&JTY_ID=&JTY_WALDEC=W442019317&JTY_SIREN=&JPA_D_D=&JPA_D_F=&rechercher.x=35&rechercher.y=14" target="_blank" rel="noreferrer">association loi 1901</a>
+    </div>
+    <div class="mx-auto text-center mt-1">
+      16 rue Maurice Daniel, 44200 Nantes
+    </div>
+    <div class="mx-auto text-center mt-1">
+      Directeur de la publication : Laurent Lourenço
+    </div>
+    <div class="mx-auto text-center mt-1">
+      Site hébergé par Github Inc, San Francisco
     </div>
   </footer>
 
