chore: split organisers into 2 lines

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -208,6 +208,8 @@
           </div>
         </div>
 
+        <div class="w-100"></div>
+
         <div class="card">
           <img class="card-img-top rounded-circle" src="./img/team/ala.jpg">
           <div class="card-body">
