--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -369,9 +369,10 @@
       </div>
 
       <div class="row donation-list">
+        <img src="./img/donations/g1.png" data-clipboard-text="9zYLSQFo6rTWweSBmPGQvPxmtCo3xpYw7qXmV9ie9omw">
         <img src="./img/donations/ark.png" data-clipboard-text="ASSRvwixbSmMGjWuJYnEtAdEiErM7acTZR">
         <img src="./img/donations/eth.png" data-clipboard-text="0xe5D08beA03e776B54508CF96db99745Cd464140D">
-        <img src="./img/donations/bitcoin.png" data-clipboard-text="3E8kKYXZEuwnHmWz9VQhksFN5f65WQ5PWp">
+        <img src="./img/donations/btc.png" data-clipboard-text="3E8kKYXZEuwnHmWz9VQhksFN5f65WQ5PWp">
         <img src="./img/donations/fiat.png" data-clipboard-text="bit.ly/don-bets">
       </div>
       
