--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -254,20 +254,20 @@
 
       <div class="row partner-list">
 
-        <div class="card spacelephant">
-          <a href="https://www.spacelephant.org" target="_blank" rel="noreferrer">
-            <img class="card-img-top" src="./img/partner/spacelephant.png">
-            <div class="overlay rounded-circle">
-              <p class="text">Space Elephant</p>
-            </div>
+        <div class="card unikname">
+          <a href="https://www.unikname.com" target="_blank" rel="noreferrer">
+            <img class="card-img-top" src="./img/partner/unikname.png">
+            <div class="overlay">
+              <p class="text">Unikname</p>
+          </div>
           </a>
         </div>
 
-        <div class="card unik-name">
-          <a href="https://www.unik-name.com" target="_blank" rel="noreferrer">
-            <img class="card-img-top" src="./img/partner/unik-name.png">
+        <div class="card unsnetwork">
+          <a href="https://www.uns.network" target="_blank" rel="noreferrer">
+            <img class="card-img-top rounded-circle" src="./img/partner/unsnetwork.png">
             <div class="overlay rounded-circle">
-              <p class="text">@unik-name</p>
+              <p class="text">UNS Network</p>
             </div>
           </a>
         </div>
@@ -289,70 +289,6 @@
             </div>
           </a>
         </div>
-
-        <!--div class="row partner-regular">
-
-          <div class="col-4">
-            <h3 class="text-white">Réguliers</h3>
-          </div>
-          <div class="col-8">
-            <div class="card spacelephant">
-              <a href="https://www.spacelephant.org" target="_blank" rel="noreferrer">
-                <img class="card-img-top" src="./img/partner/spacelephant.png">
-                <div class="overlay rounded-circle">
-                  <p class="text">Space Elephant</p>
-                </div>
-              </a>
-            </div>
-
-            <div class="card novapuls">
-              <a href="http://novapuls.fr/" target="_blank" rel="noreferrer">
-                <img class="card-img-top" src="./img/partner/novapuls.png">
-                <div class="overlay rounded-circle">
-                  <p class="text">Novapuls</p>
-                </div>
-              </a>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="row partner-occasional">
-
-          <div class="col-4">
-            <h5 class="text-white">Occasionnels</h5>
-          </div>
-          <div class="col-8">
-
-            <div class="epitech">
-              <a href="http://www.epitech.eu/nantes/ecole-informatique-nantes.aspx" target="_blank" rel="noreferrer">
-                <img class="img-fluid rounded-circle" src="./img/partner/epitech.png">
-              </a>
-            </div>
-
-            <div class="ynov">
-              <a href="https://nantes.ynov.com" target="_blank" rel="noreferrer">
-                <img class="img-fluid rounded-circle" src="./img/partner/ynov.png">
-              </a>
-            </div>
-
-            <div class="zenika">
-              <a href="https://www.zenika.com" target="_blank" rel="noreferrer">
-                <img class="img-fluid rounded-circle" src="./img/partner/zenika.png">
-              </a>
-            </div>
-          </div>
-
-          <div class="card sodifrance">
-            <a href="https://www.zenika.com" target="_blank" rel="noreferrer">
-              <img class="card-img-top" src="./img/partner/sodifrance.png">
-              <div class="overlay rounded-circle">
-                <p class="text">Sodifrance</p>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div-->
     </div>
   </section>
 
@@ -375,7 +311,7 @@
         <img src="./img/donations/btc.png" data-clipboard-text="3E8kKYXZEuwnHmWz9VQhksFN5f65WQ5PWp">
         <img src="./img/donations/fiat.png" data-clipboard-text="bit.ly/don-bets">
       </div>
-      
+
     </section>
 
   <section id="networks">
@@ -521,7 +457,7 @@
 
   <!-- Swiper -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@4.4.6/dist/js/swiper.min.js"></script>
-  
+
   <!-- ClipboardJS -->
   <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.4/dist/clipboard.min.js"></script>
 
