fix broken unikname logo

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -257,7 +257,7 @@
         <div class="card unikname">
           <a href="https://www.unikname.com" target="_blank" rel="noreferrer">
             <img class="card-img-top" src="./img/partner/unikname.png">
-            <div class="overlay">
+            <div class="overlay rounded-circle">
               <p class="text">Unikname</p>
           </div>
           </a>
